# hogl

./: .gitignore  .travis.yml  AUTHORS  Android.mk  CMakeLists.txt  COPYING  INSTALL  Makefile.am  README.md  TODO  acsubst.mk  acversion.mk  ax_code_coverage.m4  bootstrap  builddeb.in  configure.ac  generate-release-notes  generate-version  hogl-config-version.cmake.in  hogl-config.cmake.in  hogl.pc.in  hogl.spec.in  libversion.mk
ci/: install-deps-centos  install-deps-ubuntu  install_deps_centos  install_deps_ubuntu  run  run-docker  run_docker
debian/: control  copyright  libhogl-dev.install  rules
include/hogl/: area.hpp  config-builder.hpp  config.hpp  engine.hpp  flush.hpp  format-basic.hpp  format-null.hpp  format-raw.hpp  mask.hpp  output-file.hpp  output-null.hpp  output-pipe.hpp  output-plainfile.hpp  output-stderr.hpp  output-stdout.hpp  output-tee.hpp  output-textfile.hpp  platform.hpp  post.hpp  ring.hpp  timesource.hpp  tls.hpp
include/hogl/c-api/: area.h  args.h  engine.h  format.h  mask.h  output.h  post.h  schedparam.h  tls.h
include/hogl/detail/: area.hpp  argpack.hpp  args.hpp  barrier-arm-v7.hpp  barrier-arm.hpp  barrier-powerpc.hpp  barrier-x86.hpp  barrier.hpp  bitmap.hpp  compiler.hpp  engine.hpp  format.hpp  internal.hpp  magic.hpp  mask.hpp  ntos.hpp  ostrbuf-fd.hpp  ostrbuf-null.hpp  ostrbuf-stdio.hpp  ostrbuf-tee.hpp  ostrbuf.hpp  output.hpp  post.hpp  preproc.hpp  privns.hpp  record.hpp  refcount.hpp  ringbuf.hpp  schedparam.hpp  timesource.hpp  timestamp.hpp  tsobuf.hpp  types.hpp  utils.hpp
include/hogl/fmt/: format.h
include/hogl/plugin/: format.hpp
src/: CMakeLists.txt  area.cc  c-api.cc  config-builders.cc  config.cc  default-engine.cc  default-ringopts.cc  default-timesource.cc  defring.cc  deftimesource.cc  engine.cc  flush.cc  fmt-format.cc  format-basic.cc  format-raw.cc  internal.cc  mask-boost.cc  mask.cc  ostrbuf-fd.cc  ostrbuf-stdio.cc  ostrbuf-tee.cc  ostrbuf.cc  output-file.cc  output-pipe.cc  output-plainfile.cc  output-stderr.cc  output-stdout.cc  output-tee.cc  output-textfile.cc  output.cc  platform.cc  post.cc  ringbuf.cc  schedparam.cc  timesource.cc  tls.cc  utils.cc
tests/: CMakeLists.txt  affinity_test.cc  area_test.cc  args_test.cc  aux_engine_test.cc  basic_test.cc  basic_test_c-api.c  basic_test_c-api_cc.cc  builder_test.cc  c-api_test.cc  defring_test.cc  engine_cpu_core_test.cc  engine_test.cc  fmt-plugin_test.cc  format_basic_test.cc  mask_test.cc  min_test.cc  ooo_test.cc  openmp_test.cc  ostrbuf_test.cc  rawrec_test.cc  ring_test.cc  schedparam_test.cc  stress_test.cc  tso_test.cc  untouch_test.cc
tests/disasm/: bitmap.cc  c-api-post.c  main.cc  post.cc  record.cc  ring.cc  tls.cc
tools/: cook.cc  coredump.cc  coredump.hpp  hogl-grep  hogl-trace  raw-parser.cc  raw-parser.hpp  rdbuf.cc  rdbuf.hpp  recover.cc  recovery-engine.cc  recovery-engine.hpp
